# puzzle_motion

./: .gitmodules  README.md  ReadMe.md
autotakeoff/: CMakeLists.txt  package.xml
autotakeoff/launch/: cmd_vel_remapper.launch  square_flight.launch  takeoff.launch
autotakeoff/scripts/: cmd_vel_remapper_node.py  pos_cmd_remapper.py  square_flight_node.py  takeoff_node.py  takeoff_server.py
autotakeoff/srv/: Takeoff.srv
fast_planner_server/scripts/: fast_planner_client_node.py  fast_planner_server_node.py
flight_tests/: CMakeLists.txt  README.md  package.xml
flight_tests/launch/: flight_through_points_test.launch  position_hold_test.launch  rotate_angle_test.launch  spin_laps_test.launch  takeoff_test.launch
flight_tests/scripts/: flight_through_points_test.py  position_hold_test.py  rotate_angle_test.py  spin_laps_test.py  takeoff_test.py
motion_controller/: CMakeLists.txt  ReadMe.md  package.xml
motion_controller/launch/: motion_controller.launch
motion_controller/scripts/: run_node.py
motion_controller/srv/: Spin.srv
takeoff_common/: CMakeLists.txt  package.xml  setup.py
takeoff_common/src/takeoff_common/: takeoffpy.py  utils.py
